# deskbutler

./: .gitignore  BUILD.md  CHANGELOG.md  INTEGRATION_CHECKLIST.md  PRD.md  README.md  UI_IMPROVEMENTS.md  index.html  package-lock.json  package.json
.github/workflows/: release.yml
python/: analyzer.py  autolaunch.py  classifier.py  deskbutler-engine.spec  history.py  main.py  organizer.py  requirements.txt  rules.py  server.py  watcher.py
scripts/: build.ps1  build.sh  integration-plan.md
src/: App.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  main.rs  tray.rs
src/components/: CommandPalette.jsx  Dashboard.jsx  FolderWatcher.jsx  History.jsx  RuleBuilder.jsx  Settings.jsx  Sidebar.jsx  SuggestionCard.jsx  ThemeToggle.css  ThemeToggle.jsx  TopBar.css  TopBar.jsx
src/components/ui/: Button.css  Button.jsx  Card.css  Card.jsx  ComponentShowcase.css  ComponentShowcase.jsx  Dropdown.css  Dropdown.jsx  Input.css  Input.jsx  Modal.css  Modal.jsx  README.md  Toast.css  Toast.jsx  Toggle.css  Toggle.jsx  index.js
src/hooks/: useDebounce.js  useIntersectionObserver.js  usePageVisibility.js  useTheme.js
src/styles/: animations.css  components.css  global.css  pages.css  variables.css
src/utils/: performance.js  tauri.js
